--- a/4-SASS/index.html
+++ b/4-SASS/index.html
@@ -47,22 +47,22 @@
           <div class="col-12 col-md-4">
             <h2>Values</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum natus
-              aliquam aut vitae saepe asperiores commodi.
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit
+              ullam itaque repellat iure illum.
             </p>
           </div>
           <div class="col-12 col-md-4">
             <h2>Goals</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum natus
-              aliquam aut vitae saepe asperiores commodi.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel dicta
+              consequuntur odit, asperiores exercitationem.
             </p>
           </div>
           <div class="col-12 col-md-4">
             <h2>Hobbies</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum natus
-              aliquam aut vitae saepe asperiores commodi.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+              beatae voluptatibus placeat minima.
             </p>
           </div>
         </div>
@@ -79,15 +79,15 @@
             <header>
               <h2>About Me</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Similique fuga optio modi illum sequi cupiditate, cumque hic id
-                aut laudantium, voluptatibus sint, perspiciatis unde nihil error
-                expedita quisquam mollitia illo.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
+                repellendus laudantium repellat esse asperiores enim quam sit,
+                aliquam beatae ullam et totam possimus voluptate dolorum
+                sapiente iste. Quod, unde nesciunt!
               </p>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Architecto maxime dolorem earum, perferendis voluptates impedit
-                labore quam! Soluta.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
+                eos dicta provident nisi velit. Perferendis aliquam perspiciatis
+                hic atque rerum minima aut at! Quibusdam.
               </p>
             </header>
             <div class="row skills">
@@ -101,7 +101,9 @@
                   </div>
                   <div class="col-10">
                     <h3>Web Design</h3>
-                    <p>Lorem ipsum dolor sit. Lorem ipsum dolor sit.</p>
+                    <p>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
                   </div>
                 </div>
               </div>
@@ -115,7 +117,9 @@
                   </div>
                   <div class="col-10">
                     <h3>Graphic Design</h3>
-                    <p>Lorem ipsum dolor sit. Lorem ipsum dolor sit.</p>
+                    <p>
+                      Lorem ipsum dolor Sit laudantium, nesciunt quasi veniam.
+                    </p>
                   </div>
                 </div>
               </div>
@@ -129,7 +133,9 @@
                   </div>
                   <div class="col-10">
                     <h3>Online Marketing</h3>
-                    <p>Lorem ipsum dolor sit. Lorem ipsum dolor sit.</p>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing vee.
+                    </p>
                   </div>
                 </div>
               </div>
@@ -143,7 +149,7 @@
                   </div>
                   <div class="col-10">
                     <h3>SEO</h3>
-                    <p>Lorem ipsum dolor sit. Lorem ipsum dolor sit.</p>
+                    <p>Lorem ipsum dolor Commodi facilis dolore dolorem.</p>
                   </div>
                 </div>
               </div>
@@ -159,14 +165,12 @@
         <div class="row">
           <div class="col-12 col-md-6">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis
-              temporibus cumque ullam natus, et omnis cupiditate cum quasi
-              aliquam? Laudantium exercitationem similique, accusamus obcaecati
-              adipisci ab. Deserunt cumque nisi modi.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+              illum rem assumenda perferendis beatae delectus nesciunt,
+              aspernatur itaque quibusdam temporibus, debitis accusamus minus
+              harum quam ab laborum a eos dolorum.
             </p>
-            <p>
-              Lorem ipsum dolor sit nisi modi. Lorem ipsum dolor sit nisi modi.
-            </p>
+            <p>Quaerat veritatis eligendi obcaecati fuga!</p>
             <button class="main-btn">Contact Me</button>
           </div>
           <div class="col-12 col-md-6">
@@ -204,10 +208,10 @@
         <div class="row">
           <h2>Resume</h2>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            Distinctio, cum aliquam quae ex iusto, nobis dolore natus veritatis
-            et animi tempore, neque quod at? Asperiores voluptatibus et
-            repellendus vero repellat!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
+            iusto molestias deserunt quam blanditiis explicabo consequuntur
+            officiis temporibus omnis! Vitae nihil eveniet ipsum tempore. Odit
+            ipsum illum dicta dolorem ducimus?
           </p>
           <button class="main-btn">Download Resume</button>
         </div>
@@ -221,14 +225,13 @@
         <div class="row">
           <div class="col-12 col-md-6">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis
-              temporibus cumque ullam natus, et omnis cupiditate cum quasi
-              aliquam? Laudantium exercitationem similique, accusamus obcaecati
-              adipisci ab.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea
+              maiores suscipit, excepturi deserunt pariatur tenetur asperiores
+              iure, recusandae magnam eius sit quaerat quos, mollitia odit
+              obcaecati. Et tenetur laborum consequatur!
             </p>
             <p>
-              Lorem ipsum dolor sit nisi modi. Lorem ipsum dolor sit nisi modi.
-              Deserunt cumque nisi modi.
+              Lorem ipsum dolor Delectus illum voluptate vitae laborum quia.
             </p>
           </div>
           <div class="col-12 col-md-6">
@@ -237,11 +240,7 @@
               <span>College / Oct 2012 - June 2016</span>
               <span class="main-tag">4.0 GPA</span>
               <hr />
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Corporis temporibus cumque ullam natus, et omnis cupiditate cum
-                quasi aliquam? Laudantium exercitationem similique.
-              </p>
+              <p>Lorem, ipsum saepe quisquam dolor repudiandae a repellat.</p>
             </header>
             <header>
               <h3>CIT Diploma</h3>
@@ -249,9 +248,8 @@
               <span class="main-tag">4.0 GPA</span>
               <hr />
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Corporis temporibus cumque ullam natus, et omnis cupiditate cum
-                quasi aliquam? Laudantium exercitationem similique.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
+                debitis quis ea eligendi reiciendis. Aliquid porro recusandae.
               </p>
             </header>
           </div>
@@ -263,14 +261,14 @@
         <div class="row">
           <div class="col-12 col-md-6">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis
-              temporibus cumque ullam natus, et omnis cupiditate cum quasi
-              aliquam? Laudantium exercitationem similique, accusamus obcaecati
-              adipisci ab.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Distinctio vitae cupiditate harum obcaecati repellat odit debitis
+              asperiores deserunt eligendi optio nam veniam, rem ut, tempore
+              atque nulla? Eaque, reprehenderit sunt!
             </p>
             <p>
-              Lorem ipsum dolor sit nisi modi. Lorem ipsum dolor sit nisi modi.
-              Deserunt cumque nisi modi.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit,
+              aliquam officiis dolores deleniti rerum.
             </p>
           </div>
           <div class="col-12 col-md-6">
@@ -280,9 +278,8 @@
               <span class="main-tag">2 Years</span>
               <hr />
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Corporis temporibus cumque ullam natus, et omnis cupiditate cum
-                quasi aliquam? Laudantium exercitationem similique.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Magnam, consectetur eligendi. Ipsa ab tempore eveniet
               </p>
             </header>
             <header>
@@ -291,9 +288,8 @@
               <span class="main-tag">3 Years</span>
               <hr />
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Corporis temporibus cumque ullam natus, et omnis cupiditate cum
-                quasi aliquam? Laudantium exercitationem similique.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero
+                hic odit labore nemo debitis, eos culpa ipsum ab delectus.
               </p>
             </header>
             <header>
@@ -302,9 +298,8 @@
               <span class="main-tag">1 Year</span>
               <hr />
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Corporis temporibus cumque ullam natus, et omnis cupiditate cum
-                quasi aliquam? Laudantium exercitationem similique.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
+                cumque a fugiat tempore nostrum ex id. Sed soluta eos.
               </p>
             </header>
           </div>
@@ -317,10 +312,8 @@
         <figure>
           <blockquote>
             <q>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam,
-              eveniet atque! Est illo magni sed accusamus iure eaque, nemo
-              quibusdam animi quo voluptate. Sunt praesentium necessitatibus
-              minus eum! Maiores, molestiae!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia,
+              necessitatibus corrupti itaque ab adipisci natus quidem ipsam?
             </q>
           </blockquote>
           <figcaption>Sondos Sami</figcaption>
@@ -340,10 +333,10 @@
             <header>
               <h2>Portfolio</h2>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
-                quasi voluptatibus blanditiis est laudantium esse, pariatur
-                maiores aliquid eos provident delectus, error temporibus
-                consequuntur atque amet nostrum ducimus, earum eaque!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+                tempora facilis, eligendi unde sapiente laboriosam maxime
+                consequuntur dolor nisi, nobis ipsam consequatur! Quia rerum,
+                nam voluptate quas perspiciatis deserunt amet.
               </p>
             </header>
           </div>
@@ -353,63 +346,63 @@
             <div class="col-6 col-sm-4">
               <img
                 src="https://picsum.photos/400/400"
-                alt="Placeholder"
+                alt="Placeholder 1"
                 class="img-fix"
               />
             </div>
             <div class="col-6 col-sm-4">
               <img
                 src="https://picsum.photos/400/400"
-                alt="Placeholder"
+                alt="Placeholder 2"
                 class="img-fix"
               />
             </div>
             <div class="col-6 col-sm-4">
               <img
                 src="https://picsum.photos/400/400"
-                alt="Placeholder"
+                alt="Placeholder 3"
                 class="img-fix"
               />
             </div>
             <div class="col-6 col-sm-4">
               <img
                 src="https://picsum.photos/400/400"
-                alt="Placeholder"
+                alt="Placeholder 4"
                 class="img-fix"
               />
             </div>
             <div class="col-6 col-sm-4">
               <img
                 src="https://picsum.photos/400/400"
-                alt="Placeholder"
+                alt="Placeholder 5"
                 class="img-fix"
               />
             </div>
             <div class="col-6 col-sm-4">
               <img
                 src="https://picsum.photos/400/400"
-                alt="Placeholder"
+                alt="Placeholder 6"
                 class="img-fix"
               />
             </div>
             <div class="col-6 col-sm-4">
               <img
                 src="https://picsum.photos/400/400"
-                alt="Placeholder"
+                alt="Placeholder 7"
                 class="img-fix"
               />
             </div>
             <div class="col-6 col-sm-4">
               <img
                 src="https://picsum.photos/400/400"
-                alt="Placeholder"
+                alt="Placeholder 8"
                 class="img-fix"
               />
             </div>
             <div class="col-6 col-sm-4">
               <img
                 src="https://picsum.photos/400/400"
-                alt="Placeholder"
+                alt="Placeholder 9"
                 class="img-fix"
               />
             </div>
@@ -424,9 +417,9 @@
         <div class="row">
           <div class="col-12 col-md-6 contact-info">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Cupiditate illum facilis animi odio provident! Sapiente et,
-              veritatis in quidem ad aperiam quam itaque eligendi corrupti.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+              veritatis cupiditate dolores nobis deserunt, odit saepe
+              dignissimos harum quisquam officia earum iure? Aliquam.
             </p>
             <p>
               Al Nazaha St.
